Move processed files to archive and add error handling

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 orders.input.path=src/main/resources/input
 orders.output.path=src/main/resources/output
+input.files.error.path=src/main/resources/error
+input.files.archive.path=src/main/resources/archive
